# llvm

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json
cmake/: CompileOptions.cmake
examples/: example.txt  fact.c  fact.gv  fact.ll  rand.gv  rand.ll
src/: CMakeLists.txt
src/ir-graph/: CMakeLists.txt
src/ir-graph/ir-graph/: main.cpp
src/libllvmgraph/: CMakeLists.txt
src/libllvmgraph/libllvmgraph/: graph.cpp  graph.hpp
